# hotels

./: LICENSE  README.md  pyproject.toml
app/: config.py  database.py  exceptions.py  logger.py  main.py
app/bookings/: models.py  repository.py  router.py  schemas.py
app/exceptions/: __init__.py  exceptions.py
app/hotels/: models.py  repository.py  router.py  schemas.py
app/hotels/rooms/: repository.py  router.py  schemas.py
app/images/: router.py
app/migrations/: env.py
app/migrations/versions/: 6d1c1fdf271e_bookings_users_rooms.py  fb7ade51936b_initial_migration.py
app/pages/: router.py
app/rooms/: models.py
app/service/: base.py
app/templates/: hotels.html
app/templates/auth/: base.html  login.html
app/templates/auth/auth copy/: register.html
app/templates/auth/bookings/: booking_successful.html  bookings.html
app/templates/auth/hotels_and_rooms/: hotels.html
app/templates/hotels_and_rooms/: hotels.html  rooms.html
app/users/: auth.py  dependencies.py  models.py  repository.py  router.py
data/: test_data.sql
