[tool.poetry]
name = "hotels"
version = "0.1.0"
description = "Hotels booking API service"
authors = ["catstyle1101 <anton.m.rus@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.0"}
asyncpg = "^0.28.0"
alembic = "^1.12.0"
mypy = "^1.6.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
no-untyped-def = false
# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true
warn_no_return = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
